<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".FlowActivity">
    <item android:id="@+id/action_edit_target" android:title="@string/action_edit_target"
        android:icon="@android:drawable/ic_menu_compass"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_info" android:title="@string/action_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
</menu>
