<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/xmpp_user_label"
        android:id="@+id/textView"
        android:layout_weight="1" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/userEditText"
        android:layout_weight="1"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/password_label"
        android:id="@+id/textView2"
        android:layout_weight="1" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/passwordEditText"
        android:layout_weight="1"
        android:text="secretPassword"
        android:password="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/message_temp_text"
        android:id="@+id/message_text_view"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_button_label"
            android:id="@+id/test_button"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok_button_label"
            android:id="@+id/ok_button"
            android:layout_weight="1"
            android:enabled="false" />
    </LinearLayout>

</LinearLayout>