<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/iconImageView"
        android:contentDescription="@string/node_icon_description"
        android:src="@drawable/object_loading"
        android:layout_gravity="top"
        android:layout_margin="15dp"
        android:clickable="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/full_name_text"
            android:id="@+id/tv_entity_name"
            android:maxLines="1"
            android:ellipsize="end" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/id_name_text"
            android:id="@+id/tv_entity_id"
            android:enabled="false"
            android:ellipsize="end"
            android:maxLines="1" />
    </LinearLayout>
</LinearLayout>